# juntando-os-dados-e-adicionando-o-streamlit-judeus

./: front.py  gal.py  house_data.csv  leandro.py  leone.py  pedro.py  pyproject.toml
