[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Gal Levy <gallevy@edu.unifil.br>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
